# bot

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  run
.cargo/: config.toml
.zed/: settings.json
crates/api/: Cargo.toml  build.rs
crates/api/src/: main.rs
crates/api/src/endpoints/: mod.rs
crates/api/src/endpoints/$guild_id/settings/log_channel/: mod.rs
crates/api/src/endpoints/guild_id/: mod.rs  test_endpoint.rs
crates/api/src/endpoints/guild_id/health/: health_check_endpoint.rs
crates/api/src/endpoints/guild_id/settings/: mod.rs  set_log_channel_endpoint.rs
crates/api/src/endpoints/health/: health.rs  health_check_endpoint.rs  mod.rs
crates/bot/: Cargo.toml  build.rs
crates/bot/src/: main.rs
crates/bot/src/background/: guild_logs.rs  mod.rs
crates/bot/src/commands/: mod.rs
crates/bot/src/commands/moderation/: ban.rs  ban_command.rs  dban.rs  dban_command.rs  dm_notifier_utils.rs  kick.rs  kick_command.rs  mod.rs  mute.rs  mute_command.rs  unban_command.rs  warn.rs  warn_command.rs
crates/bot/src/commands/reporting/: mod.rs
crates/bot/src/commands/tags/: dtag.rs  dtag_command.rs  mod.rs  tag.rs  tag_command.rs
crates/bot/src/utils/: dates.rs  dm_notifier_utils.rs  embeds.rs  mention.rs  mod.rs  tag_utils.rs
src/: main.rs
src/commands/: mod.rs
src/commands/moderation/: ban_command.rs  dban_command.rs  kick_command.rs  mod.rs  mute_command.rs  unban_command.rs  warn_command.rs
src/commands/reporting/: mod.rs  report_message_command.rs  report_user_command.rs
src/commands/tags/: tag_command.rs  tag_utils.rs
src/utils/: guild_logs.rs  mod.rs
