[package]
name = "report-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12.4"
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
tokio = { version = "1.44.2", features = ["full"] }
dotenv = "0.15.0"
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.40"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
