[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12.4"
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
tokio = { version = "1.44.2", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.40"
rayon = "1.10.0"
strsim = "0.11.1"

# database stuff
# todo: swap sqlite for postgresql
rusqlite = { version = "0.35.0", features = ["bundled"] }
r2d2_sqlite = "0.28.0"
r2d2 = "0.8.10"
sled = "0.34.7"
