[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1.45.0", features = ["full"] }

dotenv = "0.15.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4.41"

# discord libs 
serenity = "0.12.4"
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }

# for typo fixing
strsim = "0.11.1"

# database stuff
# todo: swap sqlite for postgresql
rusqlite = { version = "0.36.0", features = ["bundled"] }
r2d2_sqlite = "0.28.0"
r2d2 = "0.8.10"
sled = "0.34.7"
